operation/manifests/envoy/20-envoy-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: envoy
    app.kubernetes.io/version: v1
  name: envoy
spec:
  minReadySeconds: 120
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: envoy
      app.kubernetes.io/version: v1
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        prometheus.io.port: "9901"
        prometheus.io/path: /stats/prometheus
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/name: envoy
        app.kubernetes.io/version: v1
    spec:
      containers:
      - command:
        - /usr/local/bin/envoy
        - -c
        - /etc/envoy/envoy.yaml
        - -l
        - debug
        image: envoyproxy/envoy:v1.12.2
        imagePullPolicy: IfNotPresent
        name: envoy
        ports:
        - containerPort: 50051
          name: envoy
          protocol: TCP
        - containerPort: 50052
          name: envoy-priv
          protocol: TCP
        - containerPort: 9901
          name: envoy-admin
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /ready
            port: 9901
          failureThreshold: 3
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /ready
            port: 9901
          failureThreshold: 3
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        volumeMounts:
        - mountPath: /etc/envoy/envoy.yaml
          name: envoy-config
          subPath: envoy.yaml
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      volumes:
      - configMap:
          defaultMode: 493
          name: envoy
        name: envoy-config
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: agentpool
                operator: In
                values:
                - scalardl
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - envoy
              topologyKey: kubernetes.io/hostname
            weight: 50
      tolerations:
        - effect: NoSchedule
          key: kubernetes.io/app
          operator: Equal
          value: scalardl
