operation/manifests/envoy/30-envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy
spec:
  ports:
  - name: envoy
    port: 50051
    protocol: TCP
    targetPort: 50051
  - name: envoy-priv
    port: 50052
    protocol: TCP
    targetPort: 50052
  selector:
    app.kubernetes.io/name: envoy
    app.kubernetes.io/version: v1
  sessionAffinity: None
  type: LoadBalancer
